Attempt to handle banks of patches. (the java api does not seem to support this